RESOLVED FIXED176346
Air should have a Vector of prologue generators instead of a HashMap representing an optional prologue generator
https://bugs.webkit.org/show_bug.cgi?id=176346
Summary Air should have a Vector of prologue generators instead of a HashMap represen...
Saam Barati
Reported 2017-09-04 20:27:55 PDT
Attachments
patch (10.07 KB, patch)
2017-09-05 18:20 PDT, Saam Barati
no flags
patch (10.06 KB, patch)
2017-09-05 18:25 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2017-09-05 18:20:57 PDT
Build Bot
Comment 2 2017-09-05 18:22:50 PDT
Attachment 319964 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/b3/B3Procedure.h:189: The parameter name "numEntrypoints" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3 2017-09-05 18:25:03 PDT
Mark Lam
Comment 4 2017-09-06 13:30:25 PDT
Comment on attachment 319967 [details] patch r=me
WebKit Commit Bot
Comment 5 2017-09-06 14:04:28 PDT
Comment on attachment 319967 [details] patch Clearing flags on attachment: 319967 Committed r221703: <http://trac.webkit.org/changeset/221703>
WebKit Commit Bot
Comment 6 2017-09-06 14:04:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2017-09-27 12:38:34 PDT
Note You need to log in before you can comment on or make changes to this bug.