Source/JavaScriptCore/b3/air/AirCode.h
@@ -171,21 +171,26 @@ public:
     bool isEntrypoint(BasicBlock*) const;
     // Note: It is only valid to call this function after LowerEntrySwitch.
     std::optional<unsigned> entrypointIndex(BasicBlock*) const;
-    void setPrologueForEntrypoint(unsigned entrypointIndex, RefPtr<PrologueGenerator> generator)
+
+    // Note: We allow this to be called even before we set m_entrypoints just for convenience to users of this API.
+    // However, if you call this before setNumEntrypoints, setNumEntrypoints will overwrite this value.
+    void setPrologueForEntrypoint(unsigned entrypointIndex, Ref<PrologueGenerator>&& generator)
     {
-        // Note: We allow this to be called even before we set m_entrypoints just for convenience to users of this API.
-        m_entrypointIndexToGenerator.set(entrypointIndex, generator);
+        m_prologueGenerators[entrypointIndex] = WTFMove(generator);
     }
-    RefPtr<PrologueGenerator> prologueGeneratorForEntrypoint(unsigned entrypointIndex)
+    const Ref<PrologueGenerator>& prologueGeneratorForEntrypoint(unsigned entrypointIndex)
     {
-        return m_entrypointIndexToGenerator.get(entrypointIndex);
+        return m_prologueGenerators[entrypointIndex];
     }
+
+    void setNumEntrypoints(unsigned);
 
     // This is used by lowerEntrySwitch().
     template<typename Vector>
     void setEntrypoints(Vector&& vector)
     {
         m_entrypoints = std::forward<Vector>(vector);
+        RELEASE_ASSERT(m_entrypoints.size() == m_prologueGenerators.size());
     }
     
     CCallHelpers::Label entrypointLabel(unsigned index) const
@@ -198,6 +203,7 @@ public:
     void setEntrypointLabels(Vector&& vector)
     {
         m_entrypointLabels = std::forward<Vector>(vector);
+        RELEASE_ASSERT(m_entrypointLabels.size() == m_prologueGenerators.size());
     }
     
     void setStackIsAllocated(bool value)
@@ -368,11 +374,12 @@ private:
     StackSlot* m_calleeSaveStackSlot { nullptr };
     Vector<FrequentedBlock> m_entrypoints; // This is empty until after lowerEntrySwitch().
     Vector<CCallHelpers::Label> m_entrypointLabels; // This is empty until code generation.
-    HashMap<unsigned, RefPtr<PrologueGenerator>, WTF::IntHash<unsigned>, WTF::UnsignedWithZeroKeyHashTraits<unsigned>> m_entrypointIndexToGenerator;
+    Vector<Ref<PrologueGenerator>, 1> m_prologueGenerators;
     RefPtr<WasmBoundsCheckGenerator> m_wasmBoundsCheckGenerator;
     const char* m_lastPhaseName;
     std::unique_ptr<Disassembler> m_disassembler;
     unsigned m_optLevel { defaultOptLevel() };
+    Ref<PrologueGenerator> m_defaultPrologueGenerator;
 };
 
 } } } // namespace JSC::B3::Air
